# cpp_skel

./: Makefile.am  README.md  configure.ac  package.json
src/: Makefile.am  main.cpp
t/: 001-basicTest.cpp  Makefile.am
